<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>recipeExtrasWidget</class>
 <widget class="QWidget" name="recipeExtrasWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>612</width>
    <height>372</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout">
   <item>
    <widget class="QScrollArea" name="scrollArea">
     <property name="widgetResizable">
      <bool>true</bool>
     </property>
     <widget class="QWidget" name="scrollAreaWidgetContents">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>0</y>
        <width>598</width>
        <height>358</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <item>
        <layout class="QFormLayout" name="formLayout">
         <property name="fieldGrowthPolicy">
          <enum>QFormLayout::ExpandingFieldsGrow</enum>
         </property>
         <item row="0" column="0">
          <widget class="QLabel" name="label_brewer">
           <property name="text">
            <string>Brewer</string>
           </property>
           <property name="buddy">
            <cstring>lineEdit_brewer</cstring>
           </property>
          </widget>
         </item>
         <item row="0" column="1">
          <widget class="SmartLineEdit" name="lineEdit_brewer">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
             <width>64</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>256</width>
             <height>16777215</height>
            </size>
           </property>
          </widget>
         </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label_asstBrewer">
           <property name="text">
            <string>Asst. Brewer</string>
           </property>
           <property name="buddy">
            <cstring>lineEdit_asstBrewer</cstring>
           </property>
          </widget>
         </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label_tasteRating">
           <property name="text">
            <string>Taste Rating</string>
           </property>
           <property name="buddy">
            <cstring>spinBox_tasteRating</cstring>
           </property>
          </widget>
         </item>
         <item row="2" column="1">
          <widget class="QSpinBox" name="spinBox_tasteRating">
           <property name="maximumSize">
            <size>
             <width>256</width>
             <height>16777215</height>
            </size>
           </property>
           <property name="buttonSymbols">
            <enum>QAbstractSpinBox::UpDownArrows</enum>
           </property>
           <property name="maximum">
            <number>50</number>
           </property>
          </widget>
         </item>
         <item row="1" column="1">
          <widget class="SmartLineEdit" name="lineEdit_asstBrewer">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
             <width>64</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>256</width>
             <height>16777215</height>
            </size>
           </property>
          </widget>
         </item>
         <item row="9" column="0">
          <widget class="QLabel" name="label_age">
           <property name="contextMenuPolicy">
            <enum>Qt::CustomContextMenu</enum>
           </property>
           <property name="text">
            <string>Bottle/Keg Age (days)</string>
           </property>
           <property name="buddy">
            <cstring>lineEdit_age</cstring>
           </property>
          </widget>
         </item>
         <item row="9" column="1">
          <widget class="SmartLineEdit" name="lineEdit_age">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
             <width>64</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>256</width>
             <height>16777215</height>
            </size>
           </property>
          </widget>
         </item>
         <item row="10" column="0">
          <widget class="SmartLabel" name="label_ageTemp">
           <property name="contextMenuPolicy">
            <enum>Qt::CustomContextMenu</enum>
           </property>
           <property name="text">
            <string>Bottle/Keg Temp</string>
           </property>
           <property name="buddy">
            <cstring>lineEdit_ageTemp</cstring>
           </property>
          </widget>
         </item>
         <item row="10" column="1">
          <widget class="SmartLineEdit" name="lineEdit_ageTemp">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
             <width>64</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>256</width>
             <height>16777215</height>
            </size>
           </property>
          </widget>
         </item>
         <item row="11" column="0">
          <widget class="QLabel" name="label_date">
           <property name="text">
            <string>Date First Brewed</string>
           </property>
           <property name="buddy">
            <cstring>dateEdit_date</cstring>
           </property>
          </widget>
         </item>
         <item row="11" column="1">
          <widget class="QDateEdit" name="dateEdit_date">
           <property name="maximumSize">
            <size>
             <width>256</width>
             <height>16777215</height>
            </size>
           </property>
           <property name="dateTime">
            <datetime>
             <hour>0</hour>
             <minute>0</minute>
             <second>0</second>
             <year>2011</year>
             <month>1</month>
             <day>1</day>
            </datetime>
           </property>
           <property name="displayFormat">
            <string>dd MMM yyyy</string>
           </property>
           <property name="calendarPopup">
            <bool>true</bool>
           </property>
          </widget>
         </item>
         <item row="12" column="0">
          <widget class="SmartLabel" name="label_carbVols">
           <property name="text">
            <string>Carbonation Volumes</string>
           </property>
           <property name="buddy">
            <cstring>lineEdit_carbVols</cstring>
           </property>
          </widget>
         </item>
         <item row="12" column="1">
          <widget class="SmartLineEdit" name="lineEdit_carbVols">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
             <width>64</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>256</width>
             <height>16777215</height>
            </size>
           </property>
           <property name="mouseTracking">
            <bool>true</bool>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <widget class="QTabWidget" name="tabWidget">
           <property name="currentIndex">
            <number>0</number>
           </property>
           <widget class="QWidget" name="tab">
            <attribute name="title">
             <string>Taste Notes</string>
            </attribute>
            <layout class="QVBoxLayout" name="verticalLayout_2">
             <item>
              <widget class="BtTextEdit" name="btTextEdit_tasteNotes">
               <property name="minimumSize">
                <size>
                 <width>256</width>
                 <height>0</height>
                </size>
               </property>
              </widget>
             </item>
            </layout>
           </widget>
           <widget class="QWidget" name="tab_2">
            <attribute name="title">
             <string>Notes</string>
            </attribute>
            <layout class="QVBoxLayout" name="verticalLayout_3">
             <item>
              <widget class="BtTextEdit" name="btTextEdit_notes">
               <property name="minimumSize">
                <size>
                 <width>256</width>
                 <height>0</height>
                </size>
               </property>
              </widget>
             </item>
            </layout>
           </widget>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>SmartLabel</class>
   <extends>QLabel</extends>
   <header location="global">widgets/SmartLabel.h</header>
   <slots>
    <signal>changedSystemOfMeasurementOrScale(PreviousScaleInfo)</signal>
   </slots>
  </customwidget>
  <customwidget>
   <class>SmartLineEdit</class>
   <extends>QLineEdit</extends>
   <header location="global">widgets/SmartLineEdit.h</header>
   <slots>
    <slot>lineChanged(PreviousScaleInfo)</slot>
   </slots>
  </customwidget>
  <customwidget>
   <class>BtTextEdit</class>
   <extends>QPlainTextEdit</extends>
   <header location="global">BtTextEdit.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>scrollArea</tabstop>
  <tabstop>lineEdit_brewer</tabstop>
  <tabstop>lineEdit_asstBrewer</tabstop>
  <tabstop>spinBox_tasteRating</tabstop>
  <tabstop>lineEdit_primaryAge</tabstop>
  <tabstop>lineEdit_primaryTemp</tabstop>
  <tabstop>lineEdit_secAge</tabstop>
  <tabstop>lineEdit_secTemp</tabstop>
  <tabstop>lineEdit_tertAge</tabstop>
  <tabstop>lineEdit_tertTemp</tabstop>
  <tabstop>lineEdit_age</tabstop>
  <tabstop>lineEdit_ageTemp</tabstop>
  <tabstop>dateEdit_date</tabstop>
  <tabstop>lineEdit_carbVols</tabstop>
  <tabstop>tabWidget</tabstop>
  <tabstop>btTextEdit_tasteNotes</tabstop>
  <tabstop>btTextEdit_notes</tabstop>
 </tabstops>
 <resources/>
</ui>
